--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name": "quality-assurer",
   "version": "1.0.0",
-  "dependencies": {
-    "express": "^4.13.0",
-    "require": "^2.4.18",
-    "serve-static": "^1.10.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-nodeunit": "~0.4.1"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-connect-prism": "^1.0.3",
+    "grunt-contrib-connect": "^0.11.2",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-csscomb": "^3.0.1",
     "load-grunt-tasks": "^3.2.0",
-    "request": "^2.60.0"
+    "request": "^2.60.0",
+    "require": "^2.4.18",
+    "serve-static": "^1.10.0"
   }
 }
